--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -39,6 +39,13 @@ main.app-container {
 }
 
 div.item-viewport {
-  flex: 1;
   padding: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+div.item-viewport > h2 {
+  text-align: center;
 }
