--- a/src/components/Menu/style.css
+++ b/src/components/Menu/style.css
@@ -3,3 +3,27 @@ div.side-menu {
   display: flex;
   flex-direction: column;
 }
+
+div.side-menu > button {
+  border: none;
+  background-color: #777;
+  color: #FFF;
+  font-size: 13px;
+  padding: 5px;
+  border-radius: 0 5px 5px 0;
+  transition: 0.2s;
+}
+
+div.side-menu > button:hover {
+  cursor: pointer;
+}
+
+div.side-menu > button.selected {
+  background-color: #CCC;
+  color: #333;
+}
+
+div.side-menu > button:active,
+div.side-menu > button:focus {
+  outline: none;
+}
