--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -33,6 +33,13 @@ header.app-header > h1 {
   color: rgba(0, 0, 0, 0.8);
 }
 
+p.header-subtitle {
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+  opacity: 0.5;
+}
+
 main.app-container {
   display: flex;
   flex: 1;
@@ -44,6 +51,7 @@ div.item-viewport {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: auto;
 }
 
 div.item-viewport > h2 {
@@ -51,5 +59,6 @@ div.item-viewport > h2 {
 }
 
 div.item-viewport > img {
+  margin: 20px 0;
   max-width: 100%;
 }
