--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -62,3 +62,16 @@ div.item-viewport > img {
   margin: 20px 0;
   max-width: 100%;
 }
+
+footer {
+  padding: 5px;
+}
+
+footer > p {
+  width: 100%;
+  margin: 0;
+  padding: 2px 10px;
+  font-size: 10px;
+  font-style: italic;
+  text-align: right;
+}
